--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "framer-motion": "^11.2.10",
+    "prop-types": "^15.8.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1"
   }
