romance carousel complete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,30 @@
 {
-  "cSpell.words": ["Faz's"]
+  "cSpell.words": [
+    "Anpan",
+    "clannad",
+    "Faz's",
+    "Furukawa",
+    "Hori",
+    "Ichikawa",
+    "Ichikawa's",
+    "Isekai",
+    "Ishida",
+    "Izumi",
+    "Katachi",
+    "Kimi",
+    "Kyouko",
+    "Mitsuha",
+    "Miyamizu",
+    "Miyamura",
+    "Nagisa",
+    "Nishimiya",
+    "Okazaki",
+    "Shouya",
+    "Sunohara",
+    "Tachibana",
+    "Taki",
+    "Taki's",
+    "Tomoya",
+    "Youhei"
+  ]
 }
